--- a/config/mnist.yml
+++ b/config/mnist.yml
@@ -1,22 +1,22 @@
 model:
-  batch_size: 32
-  z_dim: 20
+  batch_size: 64
+  z_dim: 50
   n_output: 784
 
   encoder_h1: 512
-  encoder_h2: 384
-  encoder_h3: 256
+  encoder_h2: 256
+  encoder_h3: 128
 
-  decoder_h1: 256
-  decoder_h2: 384
+  decoder_h1: 128
+  decoder_h2: 256
   decoder_h3: 512
 
 train:
   learning_rate: 0.00001
   optimizer: 'Adam'                # Adagrad, Adam, Ftrl, Momentum, RMSProp, SGD
 
-  train_steps: 200000
-  model_dir: 'logs/mnist'
+  train_steps: 150000
+  model_dir: 'logs/mnist_z_50'
 
   save_checkpoints_steps: 1000
   check_hook_n_iter: 1000
